<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- About -->

  <!-- Toolbar -->
  <string name="app_name">Audio Recorder</string>
  <string name="action_settings">Settings</string>
  <string name="tab_title_saved_recordings">Saved Recordings</string>

  <!-- Toasts -->

  <!-- Notifications -->
  <string name="notification_recording">Audio Recording&#8230;</string>

  <!-- Dialogs -->
  <string name="dialog_title_delete">Confirm Delete&#8230;</string>
  <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
  <string name="dialog_title_rename">Rename File</string>
  <string name="dialog_title_options">Options</string>

  <string name="dialog_file_share">Share File</string>
  <string name="dialog_file_rename">Rename File</string>
  <string name="dialog_file_delete">Delete File</string>
  <string name="dialog_action_cancel">Cancel</string>
  <string name="dialog_action_ok">OK</string>
  <string name="dialog_action_yes">Yes</string>
  <string name="dialog_action_no">No</string>

  <string name="no_saved_recordings_message">No saved recordings</string>
  <string name="pause_recording_button">Pause</string>
  <string name="resume_recording_button">Resume</string>

  <string name="send_to">Send to</string>

  <!-- Preferences -->
  <string name="pref_high_quality_key">pref_high_quality</string>
  <string name="pref_high_quality_title">Enable High Quality Recording</string>
  <string name="pref_high_quality_desc">Record in CD Quality</string>
  <string name="pref_theme_title">Theme</string>
  <string name="pref_theme_desc">Theme color to be used across the application</string>
  <string name="stop_recording">Stop</string>
  <string name="record_time_format">%02d:%02d:%02d</string>
  <string name="play_time_format">%02d:%02d</string>
  <string name="preference_primary_color">primary_color</string>
  <string name="preference_base_theme">base_theme</string>
  <string name="preference_accent_color">accent_color</string>
  <string name="primary_color">Primary Color</string>
  <string name="preference_layer_colors">layer_colors_key</string>
  <string name="rate_app_title">Rate Application</string>
  <string name="rate_app_desc">Rate the application in Google Play Store</string>
  <string name="current_location">Current Location</string>
  <string name="from">From:</string>
  <string name="to">To:</string>
  <string name="destination">Destination</string>
  <string name="axis">Axis:</string>
  <string name="cost_default">$4,238.00</string>
  <string name="cost_message">Costo del viaje: Monterrey, Saltillo</string>
  <string name="map_title">Mejor ruta:</string>
  <string name="title_activity_maps">MapsActivity</string>
  <string name="intro_text">Swipe edge to exit the map.</string>
    <string name="cost_resume">Resumen</string>
  <string name="told_us">¿Le parece acertada la cotización?</string>
  <string name="like_buttons_info">Por favor selecciona uno para avanzar</string>

</resources>
