<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/start_location"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/from"
                android:textSize="18sp"
                android:layout_weight=".2"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".8">

                <android.support.design.widget.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/current_location"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_location"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_marginTop="80dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/to"
                android:textSize="18sp"
                android:layout_weight=".2"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:hint="@string/destination"
                android:layout_weight="0.8">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/axis"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_marginTop="160dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/axis"
                android:textSize="18sp"
                android:layout_weight=".2"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:hint="@string/destination"
                android:layout_weight="0.8">

            </EditText>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>